make sure text doesn't overlap vimeo play button at medium resolution when the text wraps

--- a/torchbox/static/torchbox/css/large.css
+++ b/torchbox/static/torchbox/css/large.css
@@ -28,6 +28,10 @@
         margin-right:auto;
     }
 
+     .page-homepage .hero.hero-video .container {
+        top: 35%;
+     }
+
     .page-homepage .hero h1 {
         text-align: center;
         max-width: 26em;
