--- a/torchbox/static/torchbox/css/medium.css
+++ b/torchbox/static/torchbox/css/medium.css
@@ -295,7 +295,7 @@
     .page-homepage .hero.hero-video .container{
         position:absolute;
         z-index:20;
-        top:35%;
+        top:25%;
         left:0;
         right:0;
         max-width:100%;
